# gha-sbom-action

./: CHANGELOG.md  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: codeql.yaml  test-action.yaml
